--- a/templates/project_demo/style.css
+++ b/templates/project_demo/style.css
@@ -34,10 +34,11 @@ body, html {
 }
 .login-form p {
     font-weight: bold;
+    margin-bottom: 30px;
 }
 
 
-.join-page p{
+.login-join-page p{
     margin: 0;
     text-align: left;
 }
@@ -58,11 +59,6 @@ body, html {
     display: block;
     margin: 10px 0;
 }
-
-/* .login-form .join-id{
-    text-align: left;
-    font-size: bold;
-} */
 
 .input-group {
     display: flex;
@@ -112,6 +108,7 @@ body, html {
 }
 
 .login-btn:hover,
-.join-btn:hover {
+.join-btn:hover, 
+.join-btn2:hover {
     background: darkgray;
 }
