--- a/templates/project_demo/style.css
+++ b/templates/project_demo/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Moirai+One&display=swap');
 
 body, html {
-    height: 100%;
     margin: 0;
     display: flex;
     justify-content: center;
@@ -13,7 +12,7 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    min-height: 100vh;
 }
 
 .login-form {
