이미지파일 수정

--- a/templates/project_demo/html/LoginPage.html
+++ b/templates/project_demo/html/LoginPage.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div  id="login" class="login-form">
-            <img src="../../image/subtract_x2.svg" alt="logo">
+            <img src="../image/subtract_x2.svg" alt="logo">
             <h1>COMMA'</h1>
             <p>당신의 일상에'쉼표'를 선물하세요</p>
             <div class="login-join-page">
@@ -28,7 +28,7 @@
         </div>
 
         <div id="join" class="login-form hidden">
-            <img src="../../image/subtract_x2.svg" alt="logo">
+            <img src="../image/subtract_x2.svg" alt="logo">
             <h1>COMMA'</h1>
             <p>JOIN THE MEMBERSHIP</p>
             <div class="login-join-page">
