--- a/templates/Project/mypage-02.html
+++ b/templates/Project/mypage-02.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Header & Footer</title>
+    <title>마이페이지02 테스트</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="js/jquery-3.7.1.min.js"></script>
@@ -56,6 +56,8 @@
         }            
         .content {
             flex: 1;
+            margin-left: 250px;
+            margin-top: 2%;
         }
         footer {
             width: 100%;
@@ -81,6 +83,35 @@
         input:focus {
             border-color: #FF6B00 !important;
             box-shadow: 0 0 0 0.25rem rgba(255, 107, 0, 0.25) !important;
+        }
+        /*
+        << MyPage styles >>
+            ⚠️ 해당 스타일들은 마이페이지 양식을 위한 styles입니다.
+        */
+        .sidebar {
+            position: fixed;
+            top: 15%;
+            left: 2%;
+            width: 200px;
+            height: 300px;
+            background-color: #f1f1f1;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            z-index: 1000;
+        }
+
+        .sidebar ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        .sidebar ul li {
+            margin: 10px 0;
+        }
+
+        .sidebar ul li a {
+            text-decoration: none;
+            color: #333;
         }
     </style>
 </head>
@@ -122,9 +153,18 @@
         <!-- Contents -->
         <div class="content">
             <div class="container-fluid">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi quia dignissimos eligendi, sed, totam illo nemo quaerat labore consequatur laborum et sint eos ex minus dolorum asperiores numquam. Quos, officiis?
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse tempora earum impedit, nobis minima animi quidem quo voluptates voluptas. Eveniet fugit debitis voluptas doloremque explicabo unde mollitia eum sed distinctio!
-                </p>
+                <div class="sidebar">
+                    <h2>마이페이지</h2>
+                    <ul>
+                        <li><a href="#profile">프로필</a></li>
+                        <li><a href="#settings">설정</a></li>
+                        <li><a href="#logout">로그아웃</a></li>
+                        <li><a href="#logout">로그아웃</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <p>스크롤을 테스트하기 위한 내용입니다. 스크롤을 내려도 사이드바가 고정되어 있습니다.</p>
+                </div>
             </div>
         </div>
         <!-- Footer -->
