--- a/templates/Project/mypage/mypage_secession.html
+++ b/templates/Project/mypage/mypage_secession.html
@@ -132,7 +132,7 @@
                             <nav>
                                 <ul class="aside_nav">
                                     <li>
-                                        <a href="#">개인정보수정</a> 
+                                        <a href="mypage.html" id="mypageMenu1">개인정보수정</a> 
                                     </li>
                                     <li>
                                         <a href="#">내게시글</a>
@@ -152,7 +152,7 @@
                         <p>탈퇴 버튼 선택 시, 계정과 모든 기록들이 <br> 삭제되며 복구되지 않습니다.</p>
                         <div class="member_secession_btn">
                             <button class="secession_btn" type="button">회원탈퇴</button>
-                            <button class="cancel_btn" type="button">취소</button>
+                            <button onclick="cancelBtn()" class="cancel_btn" type="button">취소</button>
                         </div>
                     </div>
                 </main>
@@ -163,5 +163,11 @@
             </div>
         </footer>
     </div>
+    <script>
+        function cancelBtn() {
+                window.location.href = "mypage.html"                
+        }
+
+    </script>
 </body>
 </html>
