20240624 김대휘 템플릿 업데이트
사이드바 에러 수정.

--- a/templates/Project/Header-Footer-template.html
+++ b/templates/Project/Header-Footer-template.html
@@ -32,11 +32,12 @@
             top: 0;
             left: 0;
             width: 100%;
-            min-width: 1440px;
+            min-width: 100vw;
             height: 80px;
             z-index: 1000;
             background-color: white;
             padding: 1% 5%;
+            margin-bottom: 50px;
         }
         #search-bar {
             font-family: "Noto Sans KR", sans-serif;
@@ -50,7 +51,7 @@
         .wrapper {
             display: flex;
             flex-direction: column;
-            min-height: 1024px;
+            min-height: 100vh;
             padding-top: 100px;
             position: relative;
         }            
@@ -59,7 +60,7 @@
         }
         footer {
             width: 100%;
-            min-width: 1440px;
+            min-width: 100vw;
             font-family: "Noto Sans KR", sans-serif;
             font-size: 15px;
             color: #FFFF;
@@ -67,6 +68,7 @@
             padding: 1rem 0;
             position: relative;
             background-color: #343a40;
+            margin-top: 50px;
         }
         .nav-link:hover {
             color: #FF6B00 !important;
@@ -122,6 +124,63 @@
         <!-- Contents -->
         <div class="content">
             <div class="container-fluid">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi quia dignissimos eligendi, sed, totam illo nemo quaerat labore consequatur laborum et sint eos ex minus dolorum asperiores numquam. Quos, officiis?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse tempora earum impedit, nobis minima animi quidem quo voluptates voluptas. Eveniet fugit debitis voluptas doloremque explicabo unde mollitia eum sed distinctio!
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi quia dignissimos eligendi, sed, totam illo nemo quaerat labore consequatur laborum et sint eos ex minus dolorum asperiores numquam. Quos, officiis?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse tempora earum impedit, nobis minima animi quidem quo voluptates voluptas. Eveniet fugit debitis voluptas doloremque explicabo unde mollitia eum sed distinctio!
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi quia dignissimos eligendi, sed, totam illo nemo quaerat labore consequatur laborum et sint eos ex minus dolorum asperiores numquam. Quos, officiis?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse tempora earum impedit, nobis minima animi quidem quo voluptates voluptas. Eveniet fugit debitis voluptas doloremque explicabo unde mollitia eum sed distinctio!
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi quia dignissimos eligendi, sed, totam illo nemo quaerat labore consequatur laborum et sint eos ex minus dolorum asperiores numquam. Quos, officiis?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse tempora earum impedit, nobis minima animi quidem quo voluptates voluptas. Eveniet fugit debitis voluptas doloremque explicabo unde mollitia eum sed distinctio!
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi quia dignissimos eligendi, sed, totam illo nemo quaerat labore consequatur laborum et sint eos ex minus dolorum asperiores numquam. Quos, officiis?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse tempora earum impedit, nobis minima animi quidem quo voluptates voluptas. Eveniet fugit debitis voluptas doloremque explicabo unde mollitia eum sed distinctio!
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi quia dignissimos eligendi, sed, totam illo nemo quaerat labore consequatur laborum et sint eos ex minus dolorum asperiores numquam. Quos, officiis?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse tempora earum impedit, nobis minima animi quidem quo voluptates voluptas. Eveniet fugit debitis voluptas doloremque explicabo unde mollitia eum sed distinctio!
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi quia dignissimos eligendi, sed, totam illo nemo quaerat labore consequatur laborum et sint eos ex minus dolorum asperiores numquam. Quos, officiis?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse tempora earum impedit, nobis minima animi quidem quo voluptates voluptas. Eveniet fugit debitis voluptas doloremque explicabo unde mollitia eum sed distinctio!
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi quia dignissimos eligendi, sed, totam illo nemo quaerat labore consequatur laborum et sint eos ex minus dolorum asperiores numquam. Quos, officiis?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse tempora earum impedit, nobis minima animi quidem quo voluptates voluptas. Eveniet fugit debitis voluptas doloremque explicabo unde mollitia eum sed distinctio!
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi quia dignissimos eligendi, sed, totam illo nemo quaerat labore consequatur laborum et sint eos ex minus dolorum asperiores numquam. Quos, officiis?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse tempora earum impedit, nobis minima animi quidem quo voluptates voluptas. Eveniet fugit debitis voluptas doloremque explicabo unde mollitia eum sed distinctio!
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi quia dignissimos eligendi, sed, totam illo nemo quaerat labore consequatur laborum et sint eos ex minus dolorum asperiores numquam. Quos, officiis?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse tempora earum impedit, nobis minima animi quidem quo voluptates voluptas. Eveniet fugit debitis voluptas doloremque explicabo unde mollitia eum sed distinctio!
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi quia dignissimos eligendi, sed, totam illo nemo quaerat labore consequatur laborum et sint eos ex minus dolorum asperiores numquam. Quos, officiis?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse tempora earum impedit, nobis minima animi quidem quo voluptates voluptas. Eveniet fugit debitis voluptas doloremque explicabo unde mollitia eum sed distinctio!
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi quia dignissimos eligendi, sed, totam illo nemo quaerat labore consequatur laborum et sint eos ex minus dolorum asperiores numquam. Quos, officiis?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse tempora earum impedit, nobis minima animi quidem quo voluptates voluptas. Eveniet fugit debitis voluptas doloremque explicabo unde mollitia eum sed distinctio!
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi quia dignissimos eligendi, sed, totam illo nemo quaerat labore consequatur laborum et sint eos ex minus dolorum asperiores numquam. Quos, officiis?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse tempora earum impedit, nobis minima animi quidem quo voluptates voluptas. Eveniet fugit debitis voluptas doloremque explicabo unde mollitia eum sed distinctio!
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi quia dignissimos eligendi, sed, totam illo nemo quaerat labore consequatur laborum et sint eos ex minus dolorum asperiores numquam. Quos, officiis?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse tempora earum impedit, nobis minima animi quidem quo voluptates voluptas. Eveniet fugit debitis voluptas doloremque explicabo unde mollitia eum sed distinctio!
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi quia dignissimos eligendi, sed, totam illo nemo quaerat labore consequatur laborum et sint eos ex minus dolorum asperiores numquam. Quos, officiis?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse tempora earum impedit, nobis minima animi quidem quo voluptates voluptas. Eveniet fugit debitis voluptas doloremque explicabo unde mollitia eum sed distinctio!
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi quia dignissimos eligendi, sed, totam illo nemo quaerat labore consequatur laborum et sint eos ex minus dolorum asperiores numquam. Quos, officiis?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse tempora earum impedit, nobis minima animi quidem quo voluptates voluptas. Eveniet fugit debitis voluptas doloremque explicabo unde mollitia eum sed distinctio!
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi quia dignissimos eligendi, sed, totam illo nemo quaerat labore consequatur laborum et sint eos ex minus dolorum asperiores numquam. Quos, officiis?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse tempora earum impedit, nobis minima animi quidem quo voluptates voluptas. Eveniet fugit debitis voluptas doloremque explicabo unde mollitia eum sed distinctio!
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi quia dignissimos eligendi, sed, totam illo nemo quaerat labore consequatur laborum et sint eos ex minus dolorum asperiores numquam. Quos, officiis?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse tempora earum impedit, nobis minima animi quidem quo voluptates voluptas. Eveniet fugit debitis voluptas doloremque explicabo unde mollitia eum sed distinctio!
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi quia dignissimos eligendi, sed, totam illo nemo quaerat labore consequatur laborum et sint eos ex minus dolorum asperiores numquam. Quos, officiis?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse tempora earum impedit, nobis minima animi quidem quo voluptates voluptas. Eveniet fugit debitis voluptas doloremque explicabo unde mollitia eum sed distinctio!
+                </p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi quia dignissimos eligendi, sed, totam illo nemo quaerat labore consequatur laborum et sint eos ex minus dolorum asperiores numquam. Quos, officiis?
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse tempora earum impedit, nobis minima animi quidem quo voluptates voluptas. Eveniet fugit debitis voluptas doloremque explicabo unde mollitia eum sed distinctio!
                 </p>
