--- a/templates/Project/mypage/mypage.html
+++ b/templates/Project/mypage/mypage.html
@@ -135,7 +135,7 @@
                                         <a href="mypage.html">개인정보수정</a> 
                                     </li>
                                     <li>
-                                        <a href="#">내게시글</a>
+                                        <a href="mypage_myboard.html">내게시글</a>
                                     </li>
                                     <li>
                                         <a href="#">내여행기록</a>
@@ -242,10 +242,6 @@
                 output.src = reader.result;
             }
         }
-
-        
-
-
     </script>
 </body>
 </html>
