--- a/templates/Project/mypage/mypage_myboard.html
+++ b/templates/Project/mypage/mypage_myboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Header & Footer</title>
-    <link rel="stylesheet" href="mypage_secession.css">
+    <link rel="stylesheet" href="mypage_myboard.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="../js/jquery-3.7.1.min.js"></script>
@@ -132,7 +132,7 @@
                             <nav>
                                 <ul class="aside_nav">
                                     <li>
-                                        <a href="mypage.html" id="mypageMenu1">개인정보수정</a> 
+                                        <a href="mypage.html">개인정보수정</a> 
                                     </li>
                                     <li>
                                         <a href="mypage_myboard.html">내게시글</a>
@@ -147,15 +147,67 @@
                             </nav>
                         </div>
                     </aside>
-                    <div class="secession_message section2">
-                        <h2>정말 탈퇴하시겠어요?</h2>
-                        <p>탈퇴 버튼 선택 시, 계정과 모든 기록들이 <br> 삭제되며 복구되지 않습니다.</p>
-                        <div class="member_secession_btn">
-                            <button class="secession_btn" type="button">회원탈퇴</button>
-                            <button onclick="cancelBtn()" class="cancel_btn" type="button">취소</button>
+                    <div class="section2 myboard_box">
+                        <div class="myboard_header_text">
+                            <h3>내 게시글 목록</h3>
+                        </div>
+                        <div class="myboard_header">
+                            <div class="myboard_header_smallbox">
+                                <label>
+                                    <input onclick="Allchecked(this)" type="checkbox">
+                                </label>
+                                    <h5>전체선택</h5>
+                            </div>
+                        </div>
+                        <div class="board_header_body_line"></div>
+                        <div class="board1">
+                            <label>
+                                <input onclick="checkSelectAll()" type="checkbox" name="myBoardList">
+                            </label>
+                            <h5>드디어 오늘 하늘자전거 타고 왔음!!!</h5>
+                            <img src="../Comma-Img/하늘자전거1.png" alt="하늘자전거1">
+                            <img src="../Comma-Img/하늘자전거2.png" alt="하늘자전거2">
+                            <img src="../Comma-Img/하늘자전거3.png" alt="하늘자전거3">
+                        </div>
+                        <div class="board_body_line1"></div>
+                        <div class="board2">
+                            <label>
+                                <input onclick="checkSelectAll()" type="checkbox" name="myBoardList">
+                            </label>
+                            <h5>국내여행지 뿌시기 프로젝트-강릉편</h5>
+                            <img src="../Comma-Img/강릉1.jpg" alt="강릉1">
+                            <img src="../Comma-Img/강릉2.jpg" alt="강릉2">
+                            <img src="../Comma-Img/강릉3.jpg" alt="강릉3">
+                            <img src="../Comma-Img/강릉4.jpg" alt="강릉4">
+                        </div>
+                        <div class="board_body_line2"></div>
+                        <div class="board3">
+                            <label>
+                                <input onclick="checkSelectAll()" type="checkbox" name="myBoardList">
+                            </label>
+                            <h5>국내여행지 뿌시기 프로젝트-전주편</h5>
+                            <img src="../Comma-Img/전주1.jpg" alt="전주1">
+                            <img src="../Comma-Img/전주2.jpg" alt="전주2">
+                        </div>
+                        <div class="board_body_line3"></div>
+                        <div class="board4">
+                            <label>
+                                <input onclick="checkSelectAll()" type="checkbox" name="myBoardList">
+                            </label>
+                            <h5>국내여행지 뿌시기 프로젝트-경주편</h5>
+                            <img src="../Comma-Img/경주1.jpg" alt="경주1">
+                            <img src="../Comma-Img/경주2.jpg" alt="경주2">
+                            <img src="../Comma-Img/경주3.jpg" alt="경주3">
+                        </div>
+                        <div class="board_body_line4"></div>
+                        <div class="board_fixed_btn">
+                            <button class="fixed_btn" type="button">게시글 수정</button>
+                            <button class="remove_btn" type="button">게시글 삭제</button>
                         </div>
                     </div>
                 </main>
+            </div>
+        </div>
         <!-- Footer -->
         <footer class="bg-dark py-3">
             <div class="container" style="font-weight: bold;">
@@ -164,8 +216,26 @@
         </footer>
     </div>
     <script>
-        function cancelBtn() {
-                window.location.href = "mypage.html"                
+        function checkSelectAll() {
+            let checkboxes = document.querySelectorAll("input[type='checkbox']");
+
+            let checked = document.querySelectorAll("input[type='checkbox']:checked");
+
+            let selectAll = document.querySelector("input[type='checkbox']");
+
+            if(checkboxes.length === checked.length) {
+                selectAll.checked = true;
+            } else {
+                selectAll.checked =false;
+            }
+        }
+
+        function Allchecked(selectAll) {
+            let oneClicked = document.getElementsByName("myBoardList");
+
+            oneClicked.forEach((checkbox) => {
+                checkbox.checked = selectAll.checked;
+            })
         }
 
     </script>
