--- a/templates/Project/mypage/mypage_myboard.html
+++ b/templates/Project/mypage/mypage_myboard.html
@@ -147,6 +147,7 @@
                             </nav>
                         </div>
                     </aside>
+                    <!--내 게시글 영역-->
                     <div class="section2 myboard_box">
                         <div class="myboard_header_text">
                             <h3>내 게시글 목록</h3>
