--- a/templates/Project/mypage/mypage_secession.html
+++ b/templates/Project/mypage/mypage_secession.html
@@ -147,12 +147,15 @@
                             </nav>
                         </div>
                     </aside>
-                    <div class="secession_message section2">
-                        <h2>정말 탈퇴하시겠어요?</h2>
-                        <p>탈퇴 버튼 선택 시, 계정과 모든 기록들이 <br> 삭제되며 복구되지 않습니다.</p>
-                        <div class="member_secession_btn">
-                            <button class="secession_btn" type="button">회원탈퇴</button>
-                            <button onclick="cancelBtn()" class="cancel_btn" type="button">취소</button>
+                    <!--secession 영역-->
+                    <div class="section2 secession_message_box">
+                        <div class="secession_message">
+                            <h2>정말 탈퇴하시겠어요?</h2>
+                            <p>탈퇴 버튼 선택 시, 계정과 모든 기록들이 <br> 삭제되며 복구되지 않습니다.</p>
+                            <div class="member_secession_btn">
+                                <button class="secession_btn" type="button">회원탈퇴</button>
+                                <button onclick="cancelBtn()" class="cancel_btn" type="button">취소</button>
+                            </div>
                         </div>
                     </div>
                 </main>
