--- a/templates/Project/mypage/mypage.html
+++ b/templates/Project/mypage/mypage.html
@@ -171,7 +171,7 @@
                             <div>
                                 <label class="box2_content1">
                                     <span>
-                                        <img class="child1" src="../Comma-Img/핸드폰 svg.png" alt="휴대전화">
+                                        <img src="../Comma-Img/핸드폰 svg.png" alt="휴대전화">
                                         <span>휴대전화</span>
                                     </span>
                                     <input role="switch" type="checkbox">
@@ -193,10 +193,10 @@
                             <div>
                                 <label class="box3_content1">
                                     <span>
-                                        <img class="child1" src="../Comma-Img/핸드폰 svg.png" alt="휴대전화">
-                                        <span class="child2">휴대전화</span>
+                                        <img src="../Comma-Img/핸드폰 svg.png" alt="휴대전화">
+                                        <span>휴대전화</span>
                                     </span>
-                                    <input class="child3" role="switch" type="checkbox">
+                                    <input role="switch" type="checkbox">
                                 </label>
                             </div>
                             <div>
@@ -242,6 +242,9 @@
                 output.src = reader.result;
             }
         }
+
+        const gallery = document.querySelector(".gallery");
+
     </script>
 </body>
 </html>
