--- a/templates/SangJn_P/컨펌받아야함/team/01. My-Page/My-Page-Board.html
+++ b/templates/SangJn_P/컨펌받아야함/team/01. My-Page/My-Page-Board.html
@@ -18,7 +18,7 @@
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
                     <!-- Brand -->
-                    <a href="#" class="navbar-brand d-flex align-items-center gasoek-one-regular me-4" style="padding: 0;">
+                    <a href="../02. Main-Page/Main-Page-logout.html" class="navbar-brand d-flex align-items-center gasoek-one-regular me-4" style="padding: 0;">
                         <img src="../Element_Images/Comma-Logo.svg" alt="Comma-Img">&nbsp;&nbsp;C O M M A
                     </a>
                     <!-- Search -->
@@ -33,10 +33,10 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto" style="font-size: 20px; font-weight: bold; display: flex; gap: 30px;">
                             <li class="nav-item" style="width: 150px;">
-                                <a class="nav-link" href="#" style="text-align: center;">로그아웃</a>
+                                <a class="nav-link" href="../02. Main-Page/Main-Page-login.html" style="text-align: center;">로그아웃</a>
                             </li> 
                             <li class="nav-item" style="width: 150px;">
-                                <a class="nav-link" href="#" style="text-align: center; color: #FF6B00;">마이페이지</a>
+                                <a class="nav-link" href="My-Page-Landing.html" style="text-align: center; color: #FF6B00;">마이페이지</a>
                             </li> 
                             <li class="nav-item" style="width: 150px;">
                                 <a class="nav-link" href="#" style="text-align: center;">여행정보</a>
