--- a/templates/SangJn_P/컨펌받아야함/team/01. My-Page/My-Page-Landing.html
+++ b/templates/SangJn_P/컨펌받아야함/team/01. My-Page/My-Page-Landing.html
@@ -18,12 +18,12 @@
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
                     <!-- Brand -->
-                    <a href="#" class="navbar-brand d-flex align-items-center gasoek-one-regular me-4" style="padding: 0;">
+                    <a href="../02. Main-Page/Main-Page-logout.html" class="navbar-brand d-flex align-items-center gasoek-one-regular me-4" style="padding: 0;">
                         <img src="../Element_Images/Comma-Logo.svg" alt="Comma-Img">&nbsp;&nbsp;C O M M A
                     </a>
                     <!-- Search -->
                     <form class="d-flex" role="search" id="search-bar">
-                        <input class="form-control me-2" type="search" placeholder="검색할 내용을 입력해주세요." aria-label="Search" style="width: 350px; font-size: 20px;">
+                        <input class="form-control me-2" type="search" placeholder="검색할 내용을 입력해주세요." aria-label="Search" style="width: 500px; font-size: 20px;">
                         <button class="btn btn-dark"
                         type="submit" style="width: 100px; font-size: 20px; font-weight: bold;">검색</button>
                     </form>
@@ -34,10 +34,10 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto" style="font-size: 20px; font-weight: bold; display: flex; gap: 30px;">
                             <li class="nav-item" style="width: 150px;">
-                                <a class="nav-link" href="#" style="text-align: center;">로그아웃</a>
+                                <a class="nav-link" href="../02. Main-Page/Main-Page-login.html" style="text-align: center;">로그아웃</a>
                             </li> 
                             <li class="nav-item" style="width: 150px;">
-                                <a class="nav-link" href="#" style="text-align: center; color: #FF6B00;">마이페이지</a>
+                                <a class="nav-link" href="My-Page-Landing.html" style="text-align: center; color: #FF6B00;">마이페이지</a>
                             </li> 
                             <li class="nav-item" style="width: 150px;">
                                 <a class="nav-link" href="#" style="text-align: center;">여행정보</a>
