--- a/templates/SangJn_P/컨펌받아야함/team/Template-Css/Login-Joining-Page.css
+++ b/templates/SangJn_P/컨펌받아야함/team/Template-Css/Login-Joining-Page.css
@@ -20,8 +20,8 @@ html, body {
     margin-top: 100px;
     background: white;
     padding: 20px 50px;
-    /* border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
     text-align: center;
     width: 500px;
     position: absolute;
