--- a/프로젝트 구현단계/project_reload/css/Header-Footer-Sidebar.css
+++ b/프로젝트 구현단계/project_reload/css/Header-Footer-Sidebar.css
@@ -8,9 +8,11 @@
     font-family: "Gasoek One";
 }
 html, body {
-    height: 100vh;
+    min-height: 100vh;
     margin: 0;
     font-family: "Noto Sans KR", sans-serif;
+
+    overflow-x: hidden;
 }
 header {
     font-family: "Noto Sans KR", sans-serif;
@@ -51,6 +53,7 @@ footer {
     text-align: center;
     padding: 1rem 0;
     position: relative;
+    bottom: 0px;
     background-color: #343a40;
     margin-top: 50px;
 }
@@ -120,9 +123,9 @@ input:focus {
 }
 .content {
     flex: 1;   
-    padding: 1rem;
+    padding: 10px;
     width: 100%;
-    height: 1000px;
+    min-height: 1000px;
     display: flex;
     justify-content: center;
 
@@ -134,7 +137,9 @@ input:focus {
     top: 0%;
     left: 0%;
     width: 100%;
-    height: 100%;
+    min-height: 1000px;
+
+
 }
 
 
