--- a/04. Comma/240724 김대휘/css/sidebar-template.css
+++ b/04. Comma/240724 김대휘/css/sidebar-template.css
@@ -31,7 +31,7 @@ body, html, .wrap {
 .sidebar-logo {
   width: 10vw;
   height: 10vh;
-  margin-bottom: 5vh;
+  margin-top: 9.2vh;
 }
 .sidebar-buttons {
   display: flex;
