--- a/04. Comma/240722 이주성/css/mypage.css
+++ b/04. Comma/240722 이주성/css/mypage.css
@@ -13,11 +13,11 @@
 /*-------------------------profile_box-------------------------*/
 
 #mp_profile_box img {
-    width: 30vw;
+    width: 20vh;
     height: 20vh;
     border-radius: 50%;
     cursor: pointer;
-    transition: background-color 0.3s ease, width 0.3s ease, height 0.3s ease;
+    transition: background-color 0.3s ease;
 }
 
 @media (min-width: 400px) {
@@ -25,104 +25,87 @@
     }
 
     #mp_profile_box img {
-        width: 30vw;
+        width: 20vh;
         height: 20vh;
     }
 
     #pick_box ul li {
         margin-left: 3rem;
     }
-
 }
 
 @media (min-width: 500px) {
     #mp_profile_box img {
-
-        width: 28.5vw;
+        width: 21vh;
         height: 21vh;
     }
 }
 
 @media (min-width: 600px) {
     #mp_profile_box img {
-
-        width: 27vw;
+        width: 22vh;
         height: 22vh;
     }
-
 }
 
 @media (min-width: 700px) {
     #mp_profile_box img {
-
-        width: 25.5vw;
+        width: 23vh;
         height: 23vh;
     }
 }
 
 @media (min-width: 800px) {
     #mp_profile_box img {
-
-        width: 24vw;
+        width: 24vh;
         height: 24vh;
     }
 }
 
 @media (min-width: 900px) {
     #mp_profile_box img {
-
-        width: 22.5vw;
+        width: 25vh;
         height: 25vh;
     }
-
 }
 
 @media (min-width: 1000px) {
     #mp_profile_box img {
-
-        width: 21vw;
+        width: 26vh;
         height: 26vh;
     }
 }
 
 @media (min-width: 1100px) {
     #mp_profile_box img {
-
-        width: 19.5vw;
+        width: 27vh;
         height: 27vh;
     }
-
 }
 
 @media (min-width: 1200px) {
     #mp_profile_box img {
-
-        width: 18vw;
+        width: 28vh;
         height: 28vh;
     }
-
 }
 
 @media (min-width: 1300px) {
     #mp_profile_box img {
-
-        width: 16.5vw;
+        width: 29vh;
         height: 29vh;
     }
-
 }
 
 @media (min-width: 1400px) {
     #mp_profile_box img {
-
-        width: 15vw;
+        width: 30vh;
         height: 30vh;
     }
 
     #pick_box ul li {
         margin-left: 5rem;
     }
-
 }
 
 /*-------------------------pick_box-------------------------*/
@@ -149,7 +132,7 @@
     text-decoration-line: none;
     color: black;
     font-weight: bold;
-    border-bottom: 1px solid black ;
+    border-bottom: 1px solid black;
 }
 
 #mp_heart_icon {
@@ -159,7 +142,7 @@
     cursor: pointer;
 }
 
-#mp_pin_icon{
+#mp_pin_icon {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     padding-right: 0.4rem;
